# ch08-model-context-protocol

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
external_tools/: README.md  external_tools_server.py
mcp_primitives/: README.md  primitives_server.py
smart_home/: README.md  client_kasa_workflow.py  kasa_smart_home_server.py  mock_kasa_server.py  test_mock.py
workflow/: workflow.md
