[project]
name = "ch08-model-context-protocol"
version = "0.1.0"
description = "Chapter 8 code examples — The Model Context Protocol (MCP)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-kasa>=0.7.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=1.3.5",
    # NVIDIA embeddings / model provider for Nemotron support
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**/*"]
